Add 'featured' news item per news stream, and sections to home screen content
